--- a/app/assets/css/app.css
+++ b/app/assets/css/app.css
@@ -2,18 +2,34 @@
 .wrapper {
     background-color: #ffffff;
     width: 100%;
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
 }
 
+
+
+.header {
+    width: 100%;
+    height: 48px;
+    background-color: #CBCCCE;
+    
+    position: relative;
+    top: 0;
+    left: 0;
+    padding: 0px;
+    vertical-align: top;
+}
+
+
+
+
 .logo {
     line-height: 48px;
-    -webkit-flex: logo;
-            flex: logo;
-    width: 40%;
+
+    
     font-size: 24px;
     font-weight: bold;
     color: #000000;
@@ -25,9 +41,8 @@
 .hostname {
     line-height: 48px;
     
-    -webkit-flex: hostname;
-            flex: hostname;
-    width: 30%;
+
+    
     font-size: 14px;
     font-weight: bold;
     color: #000000;
@@ -35,54 +50,24 @@
 }
 
 
-.header {
-    width: 100%;
-    height: 48px;
-    background-color: #CBCCCE;
-    display: -webkit-flex;
-    display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 0 10px;
-    vertical-align: top;
-}
-
-
-.footer {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width:100%;
-    height: 36px;
-    background-color: #CBCCCE;
-}
-
-.footer span {
-    color: #000000;
-    display: block;
-    text-align: center;
-    line-height: 36px;
-
-}
 
 
 .bell {
+    background-color: #CBCCCE; 
+}
 
-    -webkit-flex: bell;
-            flex: bell;
-    text-align: right;
-    background-color: #CBCCCE;
-
-    padding: 1px;
-
+.version {
+    line-height: 48px;
+    
+    font-size: 14px;
+    font-weight: bold;
+    color: #000000;
 }
 
 .search-box {
     /* line-height: 48px; */
 
-    -webkit-flex: search-box;
-            flex: search-box;
+
     width: 20%;
     margin-right: 10px;
     margin-top: 8px;
@@ -90,10 +75,7 @@
 
 .body {
 
-  display: -webkit-flex;
-  display: flex;
-
-
+    width: 100%;
     margin: auto;
     padding: 5px;
     background-color: #FFFFFF
@@ -102,24 +84,20 @@
 
 .main-box {
 
-      -webkit-flex: main-box;
-            flex: main-box;
 
-    width: 90%;
-    margin: 80px auto;
+    margin: 20px auto;
     padding: 10px;
     background-color: #FFFFFF
 }
 
 .left-box{
 
-      -webkit-flex: left-box;
-            flex: left-box;
 
-    width: 10%;
-    margin: 80px auto;
-    padding: 10px;
+    width: 80%;
+    margin: 15px auto;
+    padding: 5px;
     background-color: #FFFFFF
+
 
 }
 
@@ -177,6 +155,25 @@
 .right {
     float: right;
 }
+
+
+.footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width:100%;
+    height: 36px;
+    background-color: #CBCCCE;
+}
+
+.footer span {
+    color: #000000;
+    display: block;
+    text-align: center;
+    line-height: 36px;
+
+}
+
 
 /*  
     Tablet
